--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -16,22 +16,18 @@
     }
   }
   &-body {
-    // height: calc(100% - 10.25rem);
+    height: 100%;
     display: flex;
-    background-color: beige;
-    padding: 2.5rem 1.5rem 1.5rem 1.5rem;
-    height: calc(100% - 164px);
-    &-m {
-      background-color: white;
-      width: 100%;
-      height: 100%;
-      border-radius: 0.25rem;
+    &-left {
       display: flex;
-      // justify-content: center;
-      // align-items: center;
-      // flex-direction: column;
-      // justify-content: space-between;
-      // align-items: center;
+      flex: 1;
+    }
+    &-right {
+      background: black;
+      width: 36%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     &-form {
       display: flex;
