able to go to sign up

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,10 +1,31 @@
 <div class="login">
   <div class="login-body">
-    <div class="login-body-left"></div>
+    <div class="login-body-left">
+      <img
+        src="../../../assets/images/hat_1.png"
+        alt="Logo icon"
+        title="Logo"
+        class="login-body-logo"
+      />
+    </div>
     <div class="login-body-right">
-      <div [ngSwitch]="currentPage">
+      <img
+        src="../../../assets/images/hat_2.png"
+        alt="Logo icon"
+        title="Logo"
+        class="login-body-logo"
+      />
 
+      <div [ngSwitch]="currentPage">
+        <app-sign-up *ngSwitchCase="'SIGN_UP'"
+        (onClickSignIn)="onClickSignIn()"
+        ></app-sign-up>
+        <app-sign-in
+          *ngSwitchDefault
+          (onClickSignUp)="onClickSignUp()"
+        ></app-sign-in>
       </div>
+
     </div>
   </div>
 </div>
