--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,26 +1,19 @@
 @import "../../styles/index.scss";
 .login {
+  color: white;
   height: 100%;
-  min-width: 760px;
-  &-header {
-    background-color: bisque;
-    height: 100px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &-title {
-      font-family: cursive;
-      font-size: 2rem;
-      color: chocolate;
-    }
-  }
   &-body {
     height: 100%;
     display: flex;
     &-left {
       display: flex;
+      justify-content: center;
+      align-items: center;
       flex: 1;
+      img{
+        width: 15rem;
+        height: 15rem;
+      }
     }
     &-right {
       background: black;
@@ -28,43 +21,34 @@
       display: flex;
       justify-content: center;
       align-items: center;
-    }
-    &-form {
-      display: flex;
       flex-direction: column;
-      width: 50%;
-      justify-content: center;
-      align-items: center;
-      form {
-        display: flex;
-        flex-direction: column;
-      }
-      input {
-        border: 1px solid !important;
-        outline: none !important;
-      }
-      label {
-        margin-top: 0.5rem;
+      img{
+        display: none;
       }
     }
-    &-btn-login {
-      margin-top: 1rem;
+    &-logo{
+      background-color: white;
+      border-radius: 46%;
     }
   }
-  &-footer {
-    background-color: bisque;
-    border-top: 1px solid #dedede;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 4rem;
-    padding: 0 1.5rem;
-    font-family: cursive;
-    color: chocolate;
-    &-divider {
-      width: 1px;
-      height: 22px;
-      background-color: burlywood;
+}
+
+
+@media only screen and (max-width: 780px) {
+  .login{
+    &-body {
+      &-left {
+        display: none;
+      }
+      &-right {
+        width: 100%;
+        img{
+          display: block;
+          width: 8rem;
+          height: 8rem;
+          margin-bottom: 2rem;
+        }
+      }
     }
   }
 }
