--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -1,19 +1,23 @@
-<div class="login-body-form">
-  <form [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
-    <h2>Login form</h2>
-
+<div class="sign-in">
+  <form
+    [formGroup]="loginForm"
+    (ngSubmit)="onFormSubmit()"
+    class="sign-in-form"
+  >
     <label>Email</label>
     <input formControlName="email" title="email" />
+    <div class="err-mes">{{ emailErr }}</div>
+
     <label>Password</label>
     <input formControlName="password" type="password" title="password" />
+    <div class="err-mes">{{ passwordErr }}</div>
 
-    <button
-      mat-raised-button
-      color="accent"
-      class="login-body-btn-login"
-      type="submit"
-    >
-      Sign in
-    </button>
+    <button mat-raised-button type="submit" class="sign-in-btn">Sign in</button>
+
+    <div class="sign-in-footer">
+      <button mat-button  type="button">Forgot password</button>
+
+      <button mat-button (click)="signUp()" type="button">Sign up</button>
+    </div>
   </form>
 </div>
