--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,7 +1,8 @@
 @import "../../styles/index.scss";
 .login {
-  color: white;
+  // color: white;
   height: 100%;
+  overflow: hidden;
   &-body {
     height: 100%;
     display: flex;
@@ -10,39 +11,47 @@
       justify-content: center;
       align-items: center;
       flex: 1;
-      img{
+      img {
         width: 15rem;
         height: 15rem;
       }
     }
     &-right {
-      background: black;
+      // background: black;
       width: 36%;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      img{
+      img {
         display: none;
       }
+      &-top {
+        height: 40%;
+        display: flex;
+        align-items: flex-end;
+        padding-bottom: 2rem;
+      }
+      &-bottom {
+        height: 60%;
+      }
     }
-    &-logo{
+    &-logo {
       background-color: white;
       border-radius: 46%;
     }
   }
 }
 
-
 @media only screen and (max-width: 780px) {
-  .login{
+  .login {
     &-body {
       &-left {
         display: none;
       }
       &-right {
         width: 100%;
-        img{
+        img {
           display: block;
           width: 8rem;
           height: 8rem;
