--- a/src/app/pages/sign-up/sign-up.component.scss
+++ b/src/app/pages/sign-up/sign-up.component.scss
@@ -1,3 +1,30 @@
-p{
-  color: white;
+@import "../../styles/index.scss";
+
+.sign-up {
+  width: 240px;
+  height: 100%;
+  animation: fadeInRight 0.4s;
+  label {
+    color: white;
+  }
+  &-form {
+    display: flex;
+    flex-direction: column;
+  }
+  input {
+    margin-top: 0.25rem;
+  }
+  &-btn {
+    margin-top: 1rem;
+  }
+  &-footer {
+    display: flex;
+    justify-content: space-between;
+    button{
+      color: white;
+      // padding: 0.25rem;
+      padding: 0;
+      margin-top: 1.5rem;
+    }
+  }
 }
