--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,10 +1,15 @@
 @import "./flex-box";
 @import "./spacing";
 @import "./reused";
+@import "./animations";
 
 button:disabled {
   background-color: #ededed !important;
   cursor: not-allowed;
   // color: -internal-light-dark(rgba(16, 16, 16, 0.3), rgba(255, 255, 255, 0.3));
   // border-color: -internal-light-dark(rgba(118, 118, 118, 0.3), rgba(195, 195, 195, 0.3));
+}
+
+.flex{
+  display: flex;
 }
