--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -17,7 +17,7 @@
       }
     }
     &-right {
-      // background: black;
+      background: black;
       width: 36%;
       display: flex;
       justify-content: center;
