--- a/src/app/pages/forgot-password/forgot-password.component.scss
+++ b/src/app/pages/forgot-password/forgot-password.component.scss
@@ -1,6 +1,6 @@
 @import "../../styles/index.scss";
 
-.sign-in {
+.forgot-password {
   width: 240px;
   height: 100%;
   animation: fadeInLeft 0.4s;
@@ -11,8 +11,21 @@
   input {
     margin-top: 0.25rem;
   }
+  code-input {
+    color: white;
+    margin-top: 2rem;
+    --item-height: 2.25rem;
+  }
+  &-sent {
+    color: white;
+  }
   &-btn {
     margin-top: 1rem;
+  }
+  &-resend-btn {
+    color: white;
+    background: black;
+    width: max-content;
   }
   &-footer {
     display: flex;
@@ -20,8 +33,10 @@
     margin-top: 1.5rem;
     button {
       color: white;
-      // padding: 0.25rem;
       padding: 0;
+      &:disabled {
+        color: unset;
+      }
     }
   }
 }
