g news-feed components

--- a/src/app/pages/news-feed/news-feed.component.html
+++ b/src/app/pages/news-feed/news-feed.component.html
@@ -1,1 +1,4 @@
-<p>news-feed works!</p>
+<div class="news-feed">
+  <app-news-feed-header></app-news-feed-header>
+  <app-news-feed-body></app-news-feed-body>
+</div>
