--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -2,6 +2,7 @@
 @import "./spacing";
 @import "./reused";
 @import "./animations";
+@import "./colors";
 
 button:disabled {
   background-color: #ededed !important;
