--- a/src/app/pages/login/sign-in/sign-in.component.scss
+++ b/src/app/pages/login/sign-in/sign-in.component.scss
@@ -1,9 +1,9 @@
-@import "../../styles/index.scss";
+@import "../../../styles/index.scss";
 
-.sign-up {
+.sign-in {
   width: 240px;
   height: 100%;
-  animation: fadeInRight 0.4s;
+  animation: fadeInLeft 0.4s;
   &-form {
     display: flex;
     flex-direction: column;
