--- a/src/app/pages/news-feed/news-feed-header/news-feed-header.component.html
+++ b/src/app/pages/news-feed/news-feed-header/news-feed-header.component.html
@@ -1,2 +1,4 @@
 <div class="news-feed-header">
+  <div class="news-feed-header- b">Ace Story</div>
+  <div class="news-feed-header-email">{{getFormatedEmail()}}</div>
 </div>
