--- a/src/app/pages/news-feed/news-feed-header/news-feed-header.component.scss
+++ b/src/app/pages/news-feed/news-feed-header/news-feed-header.component.scss
@@ -1,6 +1,8 @@
 @import "../../../styles/index.scss";
 
 .news-feed-header{
-  background-color: white;
   height: 4rem;
+  justify-content: space-between;
+  color: $yellow_1;
 }
+
