--- a/src/app/pages/news-feed/news-feed-body/news-feed-body.component.scss
+++ b/src/app/pages/news-feed/news-feed-body/news-feed-body.component.scss
@@ -1,9 +1,34 @@
 @import "../../../styles/index.scss";
 
-.news-feed-body{
-  background-color: black;
+.news-feed-body {
+  background-color: transparent;
   height: calc(100vh - 4rem);
-  // flex: 1;
+  width: 100%;
   display: flex;
-  // height: 100%;
+  flex-direction: column;
+  overflow: auto;
+  &-main{
+    padding: 0 1.5rem;
+
+  }
+
+  &-bg {
+    position: absolute;
+    color: white;
+    opacity: 21%;
+    font-size: 800%;
+    width: calc(100% - 3rem);
+    height: calc(100vh - 4rem);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 1004px) {
+  .news-feed-body {
+    &-bg {
+      font-size: 40px;
+    }
+  }
 }
