--- a/src/app/pages/news-feed/news-feed-footer/news-feed-footer.component.html
+++ b/src/app/pages/news-feed/news-feed-footer/news-feed-footer.component.html
@@ -1,3 +1,11 @@
 <div class="news-feed-footer">
-  Hello
+  <a
+    href="https://www.facebook.com/profile.php?id=100015087697713"
+    className="mt-2 fs-16"
+    target="blank"
+  >
+    Facebook
+  </a>
+  <div class="news-feed-footer-email">tttriet1997@gmail.com</div>
+  <div class="news-feed-footer-copry-right">© 2022 - Acestory</div>
 </div>
