--- a/src/app/pages/news-feed/news-feed-footer/news-feed-footer.component.scss
+++ b/src/app/pages/news-feed/news-feed-footer/news-feed-footer.component.scss
@@ -3,4 +3,8 @@
 .news-feed-footer {
   height: 4rem;
   background-color: white;
+  justify-content: space-between;
+  &-copry-right{
+    font-weight: bold;
+  }
 }
