--- a/src/app/components/ui/post/post.component.scss
+++ b/src/app/components/ui/post/post.component.scss
@@ -1,6 +1,9 @@
 @import "../../../styles/index.scss";
 
 .post {
+  min-width: 500px;
+  margin-bottom: 1.5rem;
+  border-bottom: 1px solid $yellow_1;
   color: white;
   display: flex;
   flex-direction: row;
@@ -9,17 +12,42 @@
   padding: 1.5rem;
   width: 100%;
   flex: 1;
+
+  button{
+    background: transparent;
+    outline: none;
+    border: none;
+  }
   &-left,
   &-right {
     flex: 1;
   }
   &-left {
     margin-right: 1.5rem;
-    &-title{
+    &-header {
+      display: flex;
+      justify-content: space-between;
+      // align-items: center;
+      &-t-a {
+        display: flex;
+        flex-direction: row;
+      }
+    }
+    &-title {
       font-weight: bold;
       font-size: 1.5rem;
     }
-    &-content{
+    &-author {
+      font-size: $p12;
+      margin-left: $p12;
+      text-decoration: underline;
+      font-style: italic;
+      color: $yellow_1;
+    }
+    &-date {
+      font-size: 0.75rem;
+    }
+    &-content {
       margin-top: 1rem;
     }
   }
@@ -30,14 +58,48 @@
     overflow: auto;
     justify-content: center;
     align-items: center;
-    &-wrap{
-      width: max-content;
-      display: flex;
+    img {
+      max-width: 100%;
     }
-    &-img{
+    .carousel-caption {
+      font-size: 0.75rem;
+    }
+    // justify-content: center;
+    // align-items: center;
+    &-wrap {
+      // display: flex;
+      // width: max-content;
+    }
+    &-img {
       object-fit: contain;
       // max-width: 45%;
       max-width: 100px;
+    }
+  }
+}
+
+@media only screen and (max-width: 1004px) {
+  .post {
+    display: flex;
+    flex-direction: column;
+    &-left {
+      margin-right: 0;
+      &-title {
+        font-weight: bold;
+        font-size: 1.5rem;
+      }
+      &-content {
+        margin-top: 1rem;
+      }
+    }
+    &-right {
+      margin-left: 0;
+      margin-top: 1.5rem;
+      justify-content: center;
+      &-wrap {
+      }
+      &-img {
+      }
     }
   }
 }
