--- a/src/app/pages/news-feed/news-feed.component.html
+++ b/src/app/pages/news-feed/news-feed.component.html
@@ -1,4 +1,4 @@
 <div class="news-feed">
-  <app-news-feed-header></app-news-feed-header>
+  <app-inner-header></app-inner-header>
   <app-news-feed-body></app-news-feed-body>
 </div>
