Doing create pót body

--- a/src/app/components/ui/inner-header/inner-header.component.html
+++ b/src/app/components/ui/inner-header/inner-header.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="inner-header-right">
 
-    <button class="inner-header-create-post nor-btn">
+    <button class="inner-header-create-post nor-btn" (click)="createPost()">
       Create Post
     </button>
 
