--- a/src/app/components/ui/post/post.component.scss
+++ b/src/app/components/ui/post/post.component.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/index.scss";
 
 .post {
-  min-width: 500px;
+  // min-width: 500px;
   margin-bottom: 1.5rem;
   border-bottom: 1px solid $yellow_1;
   color: white;
