--- a/src/app/pages/create-post/create-post-body/create-post-body.component.html
+++ b/src/app/pages/create-post/create-post-body/create-post-body.component.html
@@ -1,3 +1,42 @@
 <div class="create-post-body">
-  asdads
+  <div class="create-post-body-left">
+    <div class="NgxEditor__Wrapper create-post-body-story-input">
+      <ngx-editor-menu [editor]="editor"> </ngx-editor-menu>
+      <ngx-editor
+        [editor]="editor"
+        [(ngModel)]="html"
+        [disabled]="false"
+        placeholder="Tell us your story!"
+      ></ngx-editor>
+    </div>
+  </div>
+
+  <div class="create-post-body-right">
+    <ngb-carousel
+      *ngIf="images?.length !== 0; else noImgs"
+      [interval]="8 * 1000"
+    >
+      <ng-template ngbSlide *ngFor="let image of images">
+        <div class="picsum-img-wrapper">
+          <img [src]="image" alt="Random slide" />
+        </div>
+        <div class="carousel-caption">
+          This carousel hides navigation arrows and indicators.
+        </div>
+      </ng-template>
+    </ngb-carousel>
+    <ng-template #noImgs><mat-spinner></mat-spinner></ng-template>
+
+    <input
+      class="dis-none"
+      type="file"
+      (change)="onFileChanged($event)"
+      #fileInput
+      alt="Upload image"
+      title="Ace"
+      multiple
+    />
+    <button (click)="fileInput.click()">Select File</button>
+    <button (click)="onUpload()">Upload!</button>
+  </div>
 </div>
