--- a/src/app/components/ui/post/post.component.html
+++ b/src/app/components/ui/post/post.component.html
@@ -11,19 +11,9 @@
   </div>
 
   <div class="post-right">
-    <ngb-carousel
-      *ngIf="images?.length !== 0; else noImgs"
-      [interval]="8 * 1000"
-    >
-      <ng-template ngbSlide *ngFor="let image of images">
-        <div class="picsum-img-wrapper">
-          <img [src]="image" alt="Random slide" />
-        </div>
-        <div class="carousel-caption">
-          This carousel hides navigation arrows and indicators.
-        </div>
-      </ng-template>
-    </ngb-carousel>
-    <ng-template #noImgs><mat-spinner></mat-spinner></ng-template>
+    <app-carousel-ct
+      [images]="images"
+      [loading]="images.length === 0"
+    ></app-carousel-ct>
   </div>
 </div>
