--- a/src/app/components/ui/image-upload/image-upload.component.scss
+++ b/src/app/components/ui/image-upload/image-upload.component.scss
@@ -1,13 +1,39 @@
 @import "../../../styles/index.scss";
+
 .image-load {
+  display: flex;
+  flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  height: 100%;
   &-box {
     width: 500px;
-    height: 250px;
-    text-align: center;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent !important;
+    border: 1px dashed white;
+    color: white;
+    outline: none;
+    // cursor: pointer;
+    // &:hover {
+    //   cursor: pointer;
+    // }
   }
-  &-img {
-    margin-top: 20px;
-    width: 500px;
-    height: 400px;
+  &-imgs {
+    overflow: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-height: 100%;
+    img {
+      max-width: 200px;
+      margin-right: 1.5rem;
+      margin-top: 2rem;
+    }
+    // margin-top: 20px;
+    // width: 500px;
+    // height: 400px;
   }
 }
