--- a/src/app/pages/create-post/create-post.component.scss
+++ b/src/app/pages/create-post/create-post.component.scss
@@ -2,4 +2,10 @@
 
 .create-post {
   height: 100%;
+  min-width: 500px;
+  display: flex;
+  flex-direction: column;
+  &-init{
+    height: calc(100% - 4rem);
+  }
 }
