--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 // /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/scss/bootstrap";
+@import "app/styles/index.scss";
 
 html,
 body {
@@ -8,4 +9,13 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+html {
+  overflow: hidden;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 }
