settting up global scss

--- a/src/app/components/ui/post/post.component.scss
+++ b/src/app/components/ui/post/post.component.scss
@@ -1,4 +1,5 @@
-@import "../../../styles/index.scss";
+@import '../../../styles/colors';
+@import '../../../styles/vars';
 
 .post {
   // min-width: 500px;
