--- a/src/app/pages/create-post/create-post-body/create-post-body.component.html
+++ b/src/app/pages/create-post/create-post-body/create-post-body.component.html
@@ -3,10 +3,10 @@
     <form
       [formGroup]="postForm"
       (ngSubmit)="onFormSubmit()"
-      class="sign-in-form"
+      class="create-post-body-left-form"
     >
       <mat-form-field class="example-form-field" appearance="fill" >
-        <label>title</label>
+        <label>Title</label>
         <input formControlName="title" title="title" matInput />
       </mat-form-field>
 
