--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -2,8 +2,8 @@
 @import "./spacing";
 @import "./reused";
 @import "./animations";
-@import "./colors";
-@import "./vars";
+// @import "./colors";
+// @import "./vars";
 
 button:disabled {
   background-color: #ededed !important;
