Done Test calling APIs

--- a/src/app/components/ui/image-upload/image-upload.component.html
+++ b/src/app/components/ui/image-upload/image-upload.component.html
@@ -15,7 +15,7 @@
     (click)="fileInput.click()"
     class="image-load-box"
   >
-    <span class="">Drop your files here</span>
+    <span class="">Drop your photos here</span>
   </button>
   <div class="image-load-imgs">
     <div *ngFor="let file of uploadedFiles">
