--- a/src/app/components/ui/image-upload/image-upload.component.scss
+++ b/src/app/components/ui/image-upload/image-upload.component.scss
@@ -7,7 +7,7 @@
   // align-items: center;
   height: 100%;
   &-box {
-    width: 500px;
+    width: 100%;
     height: 150px;
     display: flex;
     justify-content: center;
@@ -16,6 +16,7 @@
     border: 1px dashed white;
     color: white;
     outline: none;
+    align-self: center;
     // cursor: pointer;
     // &:hover {
     //   cursor: pointer;
