--- a/src/app/pages/create-post/create-post-body/create-post-body.component.scss
+++ b/src/app/pages/create-post/create-post-body/create-post-body.component.scss
@@ -1,5 +1,3 @@
-
-
 .create-post-body {
   // height: calc(100% - 4rem);
   height: 100%;
@@ -18,14 +16,23 @@
   }
   &-left {
     margin-right: 1.5rem;
-    &-form{
-      label{
+    &-form {
+      label {
         color: black;
+        font-size: 1.5rem;
       }
-      ::ng-deep{
-        .mat-form-field-infix{
+      ::ng-deep {
+        .mat-form-field-infix {
           border-top: none;
         }
+      }
+    }
+    &-post {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 2rem;
+      &-btn {
       }
     }
   }
@@ -52,5 +59,7 @@
 @media only screen and (max-width: 1004px) {
   .create-post-body {
     flex-direction: column;
+    overflow: auto;
+    height: calc(100% + 10px);
   }
 }
