--- a/src/app/pages/learning/learning.component.html
+++ b/src/app/pages/learning/learning.component.html
@@ -1,5 +1,5 @@
 <div class="learning">
-  <button nz-button nzType="primary" (click)="onClickTest()">
+  <button (click)="onClickTest()">
     Test {{ testTitle }}
   </button>
   <input
